--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   app:
-    image: ghcr.io/datamesh-manager/datamesh-manager-ce:latest
+    image: datameshmanager/datamesh-manager-ce:latest
     restart: always
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/postgres
@@ -9,7 +9,6 @@ services:
       - SPRING_DATASOURCE_PASSWORD=postgres
       - SPRING_MAIL_HOST=mailhog
       - SPRING_MAIL_PORT=1025
-      # - DATAMESHMANAGER_SUPERADMINS=mail@example.com
     ports:
       - '8081:8080'
     depends_on:
