handle secrets, add resources and probes

--- a/helm/templates/datamesh-manager-deployment.yaml
+++ b/helm/templates/datamesh-manager-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: datamesh-manager
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: datamesh-manager
@@ -15,19 +15,58 @@ spec:
     spec:
       containers:
         - name: datamesh-manager
-          image: datameshmanager/datamesh-manager-ce:latest # TODO: make configurable via values.yaml
+          image: "datameshmanager/datamesh-manager-ce:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-          - containerPort: 8080
+            - containerPort: 8080
           env:
-          - name: DATAMESHMANAGER_HOST
-            value: http://localhost:8080 # TODO: make configurable via values.yaml
-          - name: SPRING_DATASOURCE_URL
-            value: jdbc:postgresql://postgres:5432/postgres
-          - name: SPRING_DATASOURCE_USERNAME
-            value: postgres # TODO: make configurable via values.yaml
-          - name: SPRING_DATASOURCE_PASSWORD
-            value: postgres # TODO: make configurable via values.yaml
-          - name: SPRING_MAIL_HOST
-            value: mailhog
-          - name: SPRING_MAIL_PORT
-            value: "1025"
+            - name: DATAMESHMANAGER_HOST
+              value: {{ .Values.datameshmanager.host }}
+            - name: SPRING_DATASOURCE_URL
+              value: {{ .Values.database.url }}
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.database.secretName }}
+                  key: {{ .Values.database.usernameKey }}
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.database.secretName }}
+                  key: {{ .Values.database.passwordKey }}
+            - name: SPRING_MAIL_HOST
+              value: {{ .Values.smtp.host }}
+            - name: SPRING_MAIL_PORT
+              value: {{ .Values.smtp.port | quote }}
+            - name: SPRING_MAIL_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.smtp.secretName }}
+                  key: {{ .Values.smtp.usernameKey }}
+            - name: SPRING_MAIL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.smtp.secretName }}
+                  key: {{ .Values.smtp.passwordKey }}
+          {{- if .Values.livenessProbe }}
+          livenessProbe:
+            {{- toYaml .Values.livenessProbe | nindent 12 }}
+          {{- end }}
+          {{- if .Values.readinessProbe }}
+          readinessProbe:
+            {{- toYaml .Values.readinessProbe | nindent 12 }}
+          {{- end }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+        {{- with .Values.nodeSelector }}
+        nodeSelector:
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.affinity }}
+        affinity:
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.tolerations }}
+        tolerations:
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
