--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   app:
     image: datameshmanager/datamesh-manager-ce:latest
@@ -16,7 +15,7 @@ services:
       - postgres
       - mailhog
   postgres:
-    image: postgres:14.6
+    image: pgvector/pgvector:pg16
     restart: always
     environment:
       - POSTGRES_USER=postgres
