--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,3 +33,8 @@ jobs:
       - name: Run TaskCat
         run: |
           taskcat test run --project-root aws/
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: taskcat-results
+          path: aws/taskcat_outputs
